<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/configDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/configDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:ems="10" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/configSamplingPeriodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sampling_period"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/configSamplingPeriod"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="number"
            android:ems="10" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/configConversionFactorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/conversion_factor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/configConversionFactor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal"
            android:ems="10" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/configAggregationPeriodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/aggregation_period"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/configAggregationPeriod"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal"
            android:ems="10" >
        </EditText>
    </LinearLayout>
    
   
    <ListView android:id="@+id/bluetoothServiceListView"
    android:layout_width="fill_parent"
    android:layout_height="160dp"/>     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/configSave"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/save"
            android:textSize="12sp" />

        <Button
            android:id="@+id/configCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>